// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarMenuBadge Snapshot Tests should match snapshot with custom className 1`] = `
<div
  aria-hidden="true"
  class="text-sidebar-foreground pointer-events-none absolute right-1 flex h-5 min-w-5 items-center justify-center rounded-md px-1 text-xs font-medium tabular-nums select-none peer-hover/menu-button:text-sidebar-accent-foreground peer-data-[active=true]/menu-button:text-sidebar-accent-foreground peer-data-[size=sm]/menu-button:top-1 peer-data-[size=default]/menu-button:top-1.5 peer-data-[size=lg]/menu-button:top-2.5 group-data-[collapsible=icon]:hidden custom-badge"
  data-sidebar="menu-badge"
  data-slot="sidebar-menu-badge"
  data-testid="sidebar-menu-badge"
>
  Pro
</div>
`;

exports[`SidebarMenuBadge Snapshot Tests should match snapshot with numeric content 1`] = `
<div
  aria-hidden="true"
  class="text-sidebar-foreground pointer-events-none absolute right-1 flex h-5 min-w-5 items-center justify-center rounded-md px-1 text-xs font-medium tabular-nums select-none peer-hover/menu-button:text-sidebar-accent-foreground peer-data-[active=true]/menu-button:text-sidebar-accent-foreground peer-data-[size=sm]/menu-button:top-1 peer-data-[size=default]/menu-button:top-1.5 peer-data-[size=lg]/menu-button:top-2.5 group-data-[collapsible=icon]:hidden"
  data-sidebar="menu-badge"
  data-slot="sidebar-menu-badge"
  data-testid="sidebar-menu-badge"
>
  5
</div>
`;

exports[`SidebarMenuBadge Snapshot Tests should match snapshot with text content 1`] = `
<div
  aria-hidden="true"
  class="text-sidebar-foreground pointer-events-none absolute right-1 flex h-5 min-w-5 items-center justify-center rounded-md px-1 text-xs font-medium tabular-nums select-none peer-hover/menu-button:text-sidebar-accent-foreground peer-data-[active=true]/menu-button:text-sidebar-accent-foreground peer-data-[size=sm]/menu-button:top-1 peer-data-[size=default]/menu-button:top-1.5 peer-data-[size=lg]/menu-button:top-2.5 group-data-[collapsible=icon]:hidden"
  data-sidebar="menu-badge"
  data-slot="sidebar-menu-badge"
  data-testid="sidebar-menu-badge"
>
  New
</div>
`;
